src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstance_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstance_StringErrorContext.class */
public final class ARBBaseInstance_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glDrawArraysInstancedBaseInstance(IIIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("nglDrawElementsInstancedBaseInstance(IIIJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseInstance(IIIJII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseInstance(IILjava/nio/ByteBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseInstance(ILjava/nio/ByteBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseInstance(ILjava/nio/ShortBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseInstance(ILjava/nio/IntBuffer;II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("nglDrawElementsInstancedBaseVertexBaseInstance(IIIJIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseVertexBaseInstance(IIIJIII)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseVertexBaseInstance(IILjava/nio/ByteBuffer;III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseVertexBaseInstance(ILjava/nio/ByteBuffer;III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseVertexBaseInstance(ILjava/nio/ShortBuffer;III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        methods.put("glDrawElementsInstancedBaseVertexBaseInstance(ILjava/nio/IntBuffer;III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBBaseInstanceErrorContext");
        return methods;
    }
}
